      versions of \R no longer work -- but they were never part of the
      API.  [In progress.]
      
      \item Many \code{.Call()} calls in package \pkg{base} have been
      migrated to \code{.Internal()} calls.
      
      \item \code{solve()} makes fewer copies, especially when \code{b}
      is a vector rather than a matrix.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} now gives a warning rather than a
      note if it finds calls to \code{abort}, \code{assert} or
      \code{exit} in compiled code, and has been able to find the
      \file{.o} file in which the calls occur.

      Such calls can terminate the \R process which loads the package.

      \item \command{R CMD check} now checks for \code{.C()},
      \code{.Call()}, \code{.External()} and \code{.Fortran()} calls in
      other packages, and gives a warning on those found from \R itself
      (which are not part of the API and change without notice).
      
      \item The location of the build and check environment files can
      now be specified by the environment variables
      \env{R_BUILD_ENVIRON} and \env{R_CHECK_ENVIRON}, respectively.

      \item \command{R CMD Sweave} gains a \option{--compact} option
      to control possibly reducing the size of the PDF file it creates
      when \option{--pdf} is given.

      \item \command{R CMD build} now omits Eclipse's \file{.metadata}
      directories, and \command{R CMD check} warns if it finds them.
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item The \code{ENCODING} argument to \code{.C()} is defunct.
      Use \code{iconv()} instead.

      \item The \code{.Internal(eval.with.vis)} non-API function has
      been removed.

      \item Support for the converters for use with \code{.C()} is not
      compiled in by default: compile \file{src/main/dotcode.c} with
      \option{-DSUPPORT_CONVERTERS} to re-enable this (untested as we
      know of no examples in packages).